[gd_scene load_steps=34 format=3 uid="uid://mpf6yiu2sln6"]

[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_c38px"]
[ext_resource type="Texture2D" uid="uid://u3y3st5rcl77" path="res://sprites/game/crate.png" id="2_accff"]
[ext_resource type="Texture2D" uid="uid://s16u6hv2kow2" path="res://sprites/game/background.png" id="3_4jxcl"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="4_8dar5"]
[ext_resource type="Texture2D" uid="uid://knumwgsh8dy2" path="res://sprites/player/frame_1_0.png" id="5_ktemb"]
[ext_resource type="Texture2D" uid="uid://ctnet8dac72f" path="res://sprites/player/frame_1_1.png" id="6_2bhpt"]
[ext_resource type="Texture2D" uid="uid://cywr2km4tnb5w" path="res://sprites/player/frame_1_2.png" id="7_kyrb0"]
[ext_resource type="Texture2D" uid="uid://cm0y40fm4xdf7" path="res://sprites/player/frame_1_3.png" id="8_pesvu"]
[ext_resource type="Texture2D" uid="uid://rsn6a57je7q8" path="res://sprites/player/frame_1_4.png" id="9_lf7ku"]
[ext_resource type="Texture2D" uid="uid://br61befdsxht0" path="res://sprites/player/frame_1_5.png" id="10_g32te"]
[ext_resource type="Texture2D" uid="uid://b13wifik7wixl" path="res://sprites/player/frame_1_6.png" id="11_nas57"]
[ext_resource type="Texture2D" uid="uid://dneqbieq7p28x" path="res://sprites/player/frame_1_7.png" id="12_v7sgs"]
[ext_resource type="Texture2D" uid="uid://danc1o3ls0yyo" path="res://sprites/player/frame_1_8.png" id="13_a4os0"]
[ext_resource type="Texture2D" uid="uid://dlx6iph6wre0k" path="res://sprites/player/frame_3_0.png" id="14_caoqv"]
[ext_resource type="Texture2D" uid="uid://bbnsqwh0ir85d" path="res://sprites/player/frame_3_1.png" id="15_ty2pl"]
[ext_resource type="Texture2D" uid="uid://dgpncjoi6cvq6" path="res://sprites/player/frame_3_2.png" id="16_uyqqw"]
[ext_resource type="Texture2D" uid="uid://dtgoqufwite4p" path="res://sprites/player/frame_3_3.png" id="17_r63aw"]
[ext_resource type="Texture2D" uid="uid://dm4q0ow4gjktj" path="res://sprites/player/frame_3_4.png" id="18_exuju"]
[ext_resource type="Texture2D" uid="uid://05pdllokm0yg" path="res://sprites/player/frame_3_5.png" id="19_el7e8"]
[ext_resource type="Texture2D" uid="uid://dtf68eqrpq08t" path="res://sprites/player/frame_3_6.png" id="20_v7eoo"]
[ext_resource type="Texture2D" uid="uid://bka767wl5uy4c" path="res://sprites/player/frame_3_7.png" id="21_iceqs"]
[ext_resource type="Texture2D" uid="uid://b08qjwela28k2" path="res://sprites/player/frame_3_8.png" id="22_chyvv"]
[ext_resource type="Texture2D" uid="uid://cxbfsqvf20emd" path="res://Sprites/player/frame_2_0.png" id="23_ju0st"]
[ext_resource type="Texture2D" uid="uid://cn2isnu27jjef" path="res://sprites/game/platform.png" id="24_cprbp"]
[ext_resource type="Script" path="res://Scripts/HUD.gd" id="25_f4vkh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_caegt"]
size = Vector2(47, 47)

[sub_resource type="PackedScene" id="PackedScene_6tjib"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("Crate", "position", "collision_layer", "collision_mask", "mass", "lock_rotation", "metadata/_edit_group_", "RigidBody2D", "Sprite2D", "scale", "texture", "CollisionShape2D", "shape"),
"node_count": 3,
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 7, 0, -1, 6, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 4, 0, 0, 0, 8, 8, -1, 3, 1, 5, 9, 6, 10, 7, 0, 0, 0, 11, 11, -1, 2, 1, 8, 12, 9, 0),
"variants": [Vector2(188, 21), 4, 7, 2.0, true, Vector2(-164.5, 2.5), Vector2(1.46875, 1.46875), ExtResource("2_accff"), Vector2(-164.5, 2.5), SubResource("RectangleShape2D_caegt")],
"version": 3
}

[sub_resource type="SpriteFrames" id="SpriteFrames_6sp6u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ktemb")
}, {
"duration": 1.0,
"texture": ExtResource("6_2bhpt")
}, {
"duration": 1.0,
"texture": ExtResource("7_kyrb0")
}, {
"duration": 1.0,
"texture": ExtResource("8_pesvu")
}, {
"duration": 1.0,
"texture": ExtResource("9_lf7ku")
}, {
"duration": 1.0,
"texture": ExtResource("10_g32te")
}, {
"duration": 1.0,
"texture": ExtResource("11_nas57")
}, {
"duration": 1.0,
"texture": ExtResource("12_v7sgs")
}, {
"duration": 1.0,
"texture": ExtResource("13_a4os0")
}],
"loop": true,
"name": &"move_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_caoqv")
}, {
"duration": 1.0,
"texture": ExtResource("15_ty2pl")
}, {
"duration": 1.0,
"texture": ExtResource("16_uyqqw")
}, {
"duration": 1.0,
"texture": ExtResource("17_r63aw")
}, {
"duration": 1.0,
"texture": ExtResource("18_exuju")
}, {
"duration": 1.0,
"texture": ExtResource("19_el7e8")
}, {
"duration": 1.0,
"texture": ExtResource("20_v7eoo")
}, {
"duration": 1.0,
"texture": ExtResource("21_iceqs")
}, {
"duration": 1.0,
"texture": ExtResource("22_chyvv")
}],
"loop": true,
"name": &"move_right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w6hvf"]
size = Vector2(26, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pd3x6"]
size = Vector2(478.25, 81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0h30n"]
size = Vector2(118.5, 557.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dvehn"]
size = Vector2(478.5, 87)

[sub_resource type="LabelSettings" id="LabelSettings_asvp5"]
font_size = 45

[node name="Game" type="Node2D"]
script = ExtResource("1_c38px")
crate_scene = SubResource("PackedScene_6tjib")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(239, 359)
scale = Vector2(3.32639, 5.00694)
texture = ExtResource("3_4jxcl")

[node name="Player" type="CharacterBody2D" parent="." groups=["player"]]
position = Vector2(-4, 47)
collision_layer = 2
collision_mask = 7
script = ExtResource("4_8dar5")
metadata/_edit_group_ = true

[node name="AnimationMovement" type="AnimatedSprite2D" parent="Player"]
position = Vector2(241, 452)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_6sp6u")
animation = &"move_left"

[node name="SpriteIdle" type="Sprite2D" parent="Player"]
position = Vector2(240, 452)
scale = Vector2(1.5, 1.5)
texture = ExtResource("23_ju0st")

[node name="Hitbox" type="CollisionShape2D" parent="Player"]
position = Vector2(240, 462)
shape = SubResource("RectangleShape2D_w6hvf")

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2(1, 1)

[node name="Sprite2D" type="Sprite2D" parent="Platform"]
position = Vector2(239.125, 635)
scale = Vector2(1.75183, 2.1125)
texture = ExtResource("24_cprbp")

[node name="Earth" type="CollisionShape2D" parent="Platform"]
position = Vector2(237.875, 677.5)
shape = SubResource("RectangleShape2D_pd3x6")

[node name="Wall 1" type="CollisionShape2D" parent="Platform"]
position = Vector2(-61, 273)
shape = SubResource("RectangleShape2D_0h30n")

[node name="Wall 2" type="CollisionShape2D" parent="Platform"]
position = Vector2(539, 267)
shape = SubResource("RectangleShape2D_0h30n")

[node name="CrateCrutch" type="RigidBody2D" parent="Platform"]
position = Vector2(-1, -1)

[node name="CrateCrutchHitbox" type="CollisionShape2D" parent="Platform/CrateCrutch"]
position = Vector2(238.75, 594.5)
shape = SubResource("RectangleShape2D_dvehn")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("25_f4vkh")

[node name="Score" type="Label" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -81.0
offset_right = 44.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOver" type="Label" parent="HUD"]
offset_left = 107.0
offset_top = 322.0
offset_right = 367.0
offset_bottom = 385.0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_asvp5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="LogTimer" type="Timer" parent="."]
wait_time = 0.3
